nvidia_gpu_stats/vendor/darling/tests/compile-fail/duplicate_word_on_variant.rs
use darling::FromMeta;

#[derive(FromMeta)]
enum Choice {
    #[darling(word, word)]
    A,
    B,
}

fn main() {}
