nvidia_gpu_stats/vendor/darling/tests/compile-fail/duplicate_word_on_variant.stderr
error: Duplicate field `word`
 --> tests/compile-fail/duplicate_word_on_variant.rs:5:21
  |
5 |     #[darling(word, word)]
  |                     ^^^^
